// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home component tests matches snapshot 1`] = `
<DocumentFragment>
  <main
    class="Home"
  >
    <div
      class="Home__bg"
    />
    <h1>
      GardenGood
    </h1>
    <p>
      Helping gardeners plan, plant, and tend their crops for a thriving garden. It's time for you to garden GOOD.
    </p>
    <h2>
      Welcome back, !
    </h2>
  </main>
</DocumentFragment>
`;

exports[`Home component tests matches snapshot when logged out 1`] = `
<DocumentFragment>
  <main
    class="Home"
  >
    <div
      class="Home__bg"
    />
    <h1>
      GardenGood
    </h1>
    <p>
      Helping gardeners plan, plant, and tend their crops for a thriving garden. It's time for you to garden GOOD.
    </p>
    <p>
      <a
        href="/login"
      >
        Login
      </a>
      <a
        href="/signup"
      >
        Signup
      </a>
    </p>
  </main>
</DocumentFragment>
`;
